<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:id="@+id/product_info_title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_default_title"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#EF6C00"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/product_info_img"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/product_basic"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/product_info_description_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_default_description"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck"/>

    <Button
        android:id="@+id/third_product_btn_share"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:backgroundTint="#EF6C00"
        android:text="@string/product_share"
        android:textSize="16sp"/>

</LinearLayout>